--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.5.6",
     "express": "4.13.x",
     "express-session": "^1.15.3",
+    "fast-csv": "^2.4.1",
     "mongodb": "^2.2.31",
     "request": "^2.81.0",
     "uuid": "^3.0.1"
